force-app/main/default/objects/UtilityMeter__c/UtilityMeter__c.object-meta.xml
<CustomObject>
    <description>A custom object (created by the Urjanet Connect app) to store utility meter information</description>
    <label>Utility Meter</label>
    <nameField>
        <label>Utility Meter Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Meters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>