force-app/main/default/objects/UtilityMeter__c/fields/BulbType__c.field-meta.xml
<CustomField>
    <fullName>BulbType__c</fullName>
    <description>When the meter is lighting, this field describes the bulb type.</description>
    <inlineHelpText>When the meter is lighting, this field describes the bulb type.</inlineHelpText>
    <label>Bulb Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>