force-app/main/default/objects/UtilityMeter__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The city of the service address for this site</description>
    <inlineHelpText>The city of the service address for this site</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>