force-app/main/default/objects/UtilityMeter__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>The country of the service address for this site</description>
    <inlineHelpText>The country of the service address for this site</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>