force-app/main/default/objects/UtilityMeter__c/fields/CreatedDateInUrjanet__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateInUrjanet__c</fullName>
    <description>The Date the credential was registered in Arcadia’s system.</description>
    <inlineHelpText>The Date the credential was registered in Arcadia’s system.</inlineHelpText>
    <label>Created Date in Arcadia</label>
    <type>DateTime</type>
</CustomField>