force-app/main/default/objects/UtilityMeter__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if an meter is active (meaning Urjanet is considering the meter to be valid).</description>
    <inlineHelpText>Indicates if an meter is active (meaning Urjanet is considering the meter to be valid).</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>