force-app/main/default/objects/UtilityMeter__c/fields/FullServiceAddress__c.field-meta.xml
<CustomField>
    <fullName>FullServiceAddress__c</fullName>
    <description>The full address of the service address for this site</description>
    <formula>StreetLine1__c + &quot;, &quot; +
IF( NOT( ISNULL(StreetLine2__c) ) ,StreetLine2__c + BR() , BR()) + 
City__c + &quot;, &quot; + State__c  + &quot;, &quot; + PostalCode__c +  BR() + 
Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The full address of the service address for this site</inlineHelpText>
    <label>Full Service Address</label>
    <type>Text</type>
</CustomField>