force-app/main/default/objects/UtilityMeter__c/fields/MeterNumber__c.field-meta.xml
<CustomField>
    <fullName>MeterNumber__c</fullName>
    <description>The meter number as extracted from the source.</description>
    <inlineHelpText>The meter number as extracted from the source.</inlineHelpText>
    <label>Meter Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>