force-app/main/default/objects/UtilityMeter__c/fields/MeterStatus__c.field-meta.xml
<CustomField>
    <fullName>MeterStatus__c</fullName>
    <description>The status of the meter.</description>
    <inlineHelpText>The status of the meter.</inlineHelpText>
    <label>Meter Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CURRENT</fullName>
                <label>Current</label>
            </value>
            <value>
                <fullName>NOT_CURRENT</fullName>
                <label>Not Current</label>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>FIX</fullName>
                <label>Fix</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>