force-app/main/default/objects/UtilityMeter__c/fields/NextExpectedPostDate__c.field-meta.xml
<CustomField>
    <fullName>NextExpectedPostDate__c</fullName>
    <description>The date the next bill is expected to be available.</description>
    <inlineHelpText>The date the next bill is expected to be available.</inlineHelpText>
    <label>Next Expected Post Date</label>
    <type>Date</type>
</CustomField>