force-app/main/default/objects/UtilityMeter__c/fields/PipeType__c.field-meta.xml
<CustomField>
    <fullName>PipeType__c</fullName>
    <description>When the meter is water, this field describes the pipe type</description>
    <inlineHelpText>When the meter is water, this field describes the pipe type</inlineHelpText>
    <label>Pipe Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>