force-app/main/default/objects/UtilityMeter__c/fields/PodNumber__c.field-meta.xml
<CustomField>
    <fullName>PodNumber__c</fullName>
    <description>The point of delivery number in deregulated markets. This is an independent identifier for meter location and used by all utility companies in deregulated markets.</description>
    <inlineHelpText>The point of delivery number in deregulated markets. This is an independent identifier for meter location and used by all utility companies in deregulated markets.</inlineHelpText>
    <label>Pod Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>