force-app/main/default/objects/UtilityMeter__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>The postal code of the service address for this site</description>
    <inlineHelpText>The postal code of the service address for this site</inlineHelpText>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>