force-app/main/default/objects/UtilityMeter__c/fields/PreviousMeterNumber__c.field-meta.xml
<CustomField>
    <fullName>PreviousMeterNumber__c</fullName>
    <description>When a meter number change occurs, this is the previous meter number printed on the statement.</description>
    <inlineHelpText>When a meter number change occurs, this is the previous meter number printed on the statement.</inlineHelpText>
    <label>Previous Meter Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>