force-app/main/default/objects/UtilityMeter__c/fields/ProviderId__c.field-meta.xml
<CustomField>
    <fullName>ProviderId__c</fullName>
    <description>Provider ID for the meter on Arcadia System.</description>
    <externalId>true</externalId>
    <inlineHelpText>Provider ID for the meter on Arcadia System.</inlineHelpText>
    <label>Arcadia Provider ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>