force-app/main/default/objects/UtilityMeter__c/fields/ProviderName__c.field-meta.xml
<CustomField>
    <fullName>ProviderName__c</fullName>
    <description>Provider Name for the meter on Arcadia System.</description>
    <externalId>true</externalId>
    <inlineHelpText>Provider Name for the meter on Arcadia System.</inlineHelpText>
    <label>Arcadia Utility Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>