force-app/main/default/objects/UtilityMeter__c/fields/ServiceDescription__c.field-meta.xml
<CustomField>
    <fullName>ServiceDescription__c</fullName>
    <description>The meter description of the service.</description>
    <inlineHelpText>The meter description of the service.</inlineHelpText>
    <label>Service Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>