force-app/main/default/objects/UtilityMeter__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <description>The meter’s service type.</description>
    <inlineHelpText>The meter’s service type.</inlineHelpText>
    <label>Service Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>