force-app/main/default/objects/UtilityMeter__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>The state of the service address for this site</description>
    <inlineHelpText>The state of the service address for this site</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>