force-app/main/default/objects/UtilityMeter__c/fields/StationaryAssetEnvironmentalSource__c.field-meta.xml
<CustomField>
    <fullName>StationaryAssetEnvironmentalSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Stationary Asset Environmental Source for this Utility Meter.</description>
    <inlineHelpText>The Stationary Asset Environmental Source for this Utility Meter.</inlineHelpText>
    <label>Stationary Asset Environmental Source</label>
    <referenceTo>StnryAssetEnvrSrc</referenceTo>
    <relationshipLabel>Utility Meters</relationshipLabel>
    <relationshipName>UtilityMeters</relationshipName>
    <type>Lookup</type>
</CustomField>