force-app/main/default/objects/UtilityMeter__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
    ISBLANK(StationaryAssetEnvironmentalSource__c),
    IMAGE(
        IF(
            $Setup.UrjanetSettings__c.DevelopmentOrg__c = FALSE,
            &quot;/resource/urjanet__UrjanetNZCAssets/UrjanetNZCAssets/img/arcadia_wrong_symbol.png&quot;,
            &quot;/resource/UrjanetNZCAssets/UrjanetNZCAssets/img/arcadia_wrong_symbol.png&quot;
        ),
        &quot;Cross Image&quot;,
        10,
        10
    ) &amp; &quot; Must be linked to stationary asset&quot;,
    IMAGE(
        IF(
            $Setup.UrjanetSettings__c.DevelopmentOrg__c = FALSE,
            &quot;/resource/urjanet__UrjanetNZCAssets/UrjanetNZCAssets/img/arcadia_right_symbol.png&quot;,
            &quot;/resource/UrjanetNZCAssets/UrjanetNZCAssets/img/arcadia_right_symbol.png&quot;
        ),
        &quot;Tick Image&quot;,
        10,
        10
    ) &amp; &quot; OK&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connection Status</label>
    <type>Text</type>
</CustomField>