force-app/main/default/objects/UtilityMeter__c/fields/StreetLine1__c.field-meta.xml
<CustomField>
    <fullName>StreetLine1__c</fullName>
    <description>The first street line of the service address for this site</description>
    <inlineHelpText>The first street line of the service address for this site</inlineHelpText>
    <label>Street Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>