force-app/main/default/objects/UtilityMeter__c/fields/StreetLine2__c.field-meta.xml
<CustomField>
    <fullName>StreetLine2__c</fullName>
    <description>The second street line (if applicable) of the service address for this site</description>
    <inlineHelpText>The second street line (if applicable) of the service address for this site</inlineHelpText>
    <label>Street Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>