force-app/main/default/objects/UtilityMeter__c/fields/UrjanetId__c.field-meta.xml
<CustomField>
    <fullName>UrjanetId__c</fullName>
    <description>Unique ID for the meter on Arcadia system.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID for the meter on Arcadia system.</inlineHelpText>
    <label>ArcadiaId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>