force-app/main/default/objects/UtilityMeter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MeterStatus__c</columns>
    <columns>ServiceType__c</columns>
    <columns>StationaryAssetEnvironmentalSource__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>