force-app/main/default/objects/UtilityMeter__c/listViews/MetersWithoutSites.listView-meta.xml
<ListView>
    <fullName>MetersWithoutSites</fullName>
    <columns>NAME</columns>
    <columns>MeterStatus__c</columns>
    <columns>ServiceType__c</columns>
    <columns>StationaryAssetEnvironmentalSource__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MeterStatus__c</field>
        <operation>equals</operation>
        <value>CURRENT,NOT_CURRENT,FIX</value>
    </filters>
    <filters>
        <field>StationaryAssetEnvironmentalSource__c</field>
        <operation>equals</operation>
    </filters>
    <label>Meters without Sites</label>
</ListView>